--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -177,7 +177,7 @@
             height: 100%;
             padding: 0 calc(#{$page-header-find-pro-btn} + 15px) 0 60px;
             border: none;
-            font-size: 11pt;
+            font-size: 12pt;
             color: #352f4a;
 
             &::placeholder {
@@ -244,6 +244,7 @@
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        height: 60px;
     }
 
     .navbar {
