--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -146,7 +146,7 @@ body {
     .form-control,
     .form-control::placeholder {
       font-family: $main-font;
-      font-size: 12pt;
+      font-size: 13pt;
     }
 
     .form-control::placeholder {
@@ -212,6 +212,10 @@ body {
           display: block !important;
         }
       }
+    }
+
+    .return-button {
+      display: none;
     }
 
     .find-box {
@@ -647,6 +651,40 @@ body {
       width: 100%;
       height: auto;
 
+      &.fixed {
+        z-index: 9000;
+        transform: inherit !important;
+
+        .form-group-mobile-bg {
+          position: fixed !important;
+          top: 0;
+          left: 0;
+          right: 0;
+          bottom: 0;
+          background: #fff;
+          width: 100vw;
+          height: 100vh;
+          z-index: 999;
+        }
+
+        .super-placeholder {
+          bottom: 0;
+        }
+
+        .return-button {
+          position: absolute;
+          top: 50%;
+          right: 10px;
+          transform: translate(0, -50%);
+          display: block;
+          font-size: 16pt;
+        }
+
+        .find-btn {
+          display: none;
+        }
+      }
+
       .super-placeholder-heading {
         font-size: 12.5pt;
       }
@@ -686,6 +724,8 @@ body {
         padding-right: 10px !important;
         padding-left: 50px !important;
         pointer-events: auto;
+        font-size: 12pt;
+        transition: position 500ms ease-in-out;
 
         &::placeholder {
           color: transparent !important;
@@ -698,6 +738,22 @@ body {
             color: #b3b3b3 !important;
           }
         }
+
+        &:focus {
+          //position: fixed;
+          //top: -180px;
+          //left: 0;
+          //width: 100%;
+          //pointer-events: auto;
+          //background-color: red; // remove !!!!
+        }
+      }
+
+      .form-control:focus + .super-placeholder {
+        //bottom: auto;
+        //top: -197px !important;
+        //left: 0;
+        //z-index: 111;
       }
 
       .form-control:focus + .super-placeholder .main-super-placeholder-heading {
